still working around markdown, to fig out

--- a/bhanu-metarefresh.org
+++ b/bhanu-metarefresh.org
@@ -1,6 +1,6 @@
-#Title: To Metarefresh 2015 
-#Author: Bhanu Prakash (salus sage)
-#email: bhanu at servelots dot com
+#+Title: To Metarefresh 2015 
+#+Author: Bhanu Prakash (salus sage)
+#+email: bhanu at servelots dot com
 As usual my watch was at least 3 hours off from the world i wanted to be in, and rush out of my home at 12.00pm. I rather though the venue is so close to my house, i ll be there in  no time, but did not realize how much time is no time.
 
 On the same day, some 10 year old public litigation for Lake encroachment had gotten a Judicial move to demolish encroached property. All roads leading to the venue became, 1 road leading to the venue, which was also used as an emergency detour for the regular traffic. (which is like a zillion bikes, a trillion cars, few hundred rickshaws, and buses which were stuck in every curve)
